Day 5 Email & OTP Service Backend